# tidx

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.toml  docker-compose.test.yml  vercel.json
.github/workflows/: binary.yml  docker.yml  release.yml  verify.yml
benches/: engine_bench.rs  query_bench.rs  scale_bench.rs  sync_bench.rs  write_bench.rs
db/: blocks.sql  explorer.sql  internal_txs.sql  kaspa_provenance.sql  l2_withdrawals.sql  logs.sql  sync_state.sql  txs.sql
db/clickhouse/: blocks.sql  internal_txs.sql  kaspa_entries.sql  kaspa_l2_submissions.sql  l2_withdrawals.sql  logs.sql  receipts.sql  txs.sql
deploy/prod/: .env.example  CLICKHOUSE_QUERIES.md  Caddyfile  INVESTIGATOR_QUERIES.md  README.md  alerts.yml  backup-postgres.sh  config.toml  docker-compose.yml  prometheus.yml  redeploy.sh  run-blockscout-import.sh  stability-smoke.sh
deploy/testprod/: .env.example  CLICKHOUSE_QUERIES.md  Caddyfile  INVESTIGATOR_QUERIES.md  README.md  alerts.yml  clickhouse-config.xml  config.toml  docker-compose.yml  (+1 more)
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  KASPA_PROVENANCE.md  PLAN.md  TEMPO_PROTOCOL_SPECIFICS.md  timescale.md
migrations/: 001_blocks.sql  002_txs.sql  003_logs.sql  004_sync_state.sql  005_partitions.sql  006_timescale_hypertables.sql
scripts/: docker.sh
src/: clickhouse.rs  config.rs  duckdb.rs  igra_timestamp.rs  lib.rs  main.rs  metrics.rs  tempo.rs  types.rs
src/api/: mod.rs  (+4 more)
tests/: api_live_test.rs  broadcast_test.rs  clickhouse_test.rs  l1_sender_schema_test.rs  parquet_export_test.rs  smoke_test.rs  sync_optimizations_test.rs  tables_test.rs
(+78 files in other folders)
